--- a/dinotracker/src/app/dinolist/dinolist.component.html
+++ b/dinotracker/src/app/dinolist/dinolist.component.html
@@ -1,6 +1,6 @@
 <p>dinolist works!</p>
-<table mat-table [dataSource]="dinoList">
-  
+<table mat-table [dataSource]="list">
+
   <ng-container matColumnDef="name">
     <th mat-header-cell *matHeaderCellDef> Name </th>
     <td mat-cell *matCellDef="let dino"> {{dino.name}} </td>
@@ -22,7 +22,7 @@
     <td mat-cell *matCellDef="let dino"> {{dino.base_melee}} </td>
   </ng-container>
 
-  
+
   <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
   <tr mat-row *matRowDef="let myRowData; columns: columnsToDisplay"></tr>
 </table>
